--- a/server/package.json
+++ b/server/package.json
@@ -10,12 +10,12 @@
 	},
 	"author": "rubaba",
 	"license": "ISC",
-
-  "dependencies": {
-    "apollo-server-express": "^3.13.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "express-graphql": "^0.12.0",
-    "graphql": "^15.8.0"
-  }
+	"dependencies": {
+		"apollo-server-express": "^3.13.0",
+		"cors": "^2.8.5",
+		"express": "^4.18.2",
+		"express-graphql": "^0.12.0",
+		"graphql": "^15.8.0",
+		"mongoose": "^8.1.1"
+	}
 }
