--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,12 @@
 	"license": "ISC",
 	"dependencies": {
 		"apollo-server-express": "^3.13.0",
+		"bcrypt": "^5.1.1",
 		"cors": "^2.8.5",
 		"express": "^4.18.2",
 		"express-graphql": "^0.12.0",
 		"graphql": "^15.8.0",
+		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.1.1"
 	}
 }
