--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
 		"apollo-server-express": "^3.13.0",
 		"bcrypt": "^5.1.1",
 		"cors": "^2.8.5",
+		"crypto": "^1.0.1",
+		"dotenv": "^16.4.2",
 		"express": "^4.18.2",
 		"express-graphql": "^0.12.0",
 		"graphql": "^15.8.0",
