--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "task-manager",
+
   "version": "1.0.0",
+
   "description": "A simple task manager",
-  "main": "server.js",
+
+  "main": "server/server.js",
+
   "dependencies": {
+
     "accepts": "^1.3.8",
     "apollo-datasource": "^3.3.2",
     "apollo-reporting-protobuf": "^3.4.0",
@@ -101,11 +106,25 @@
     "whatwg-url": "^5.0.0",
     "xss": "^1.0.14",
     "yallist": "^4.0.0"
+
   },
-  "devDependencies": {},
+
+  "devDependencies": {
+
+    "concurrently": "^8.2.2"
+
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+
+    "start": "node server/server.js --ignore client",
+		"develop": "concurrently \"cd server && npm run start\" \"cd client && npm run dev\"",
+		"install": "cd server && npm i && cd ../client && npm i",
+		"build": "cd client && npm run build",
+		"preview":"concurrently \"cd server && npm run start\" \"cd client && npm run preview\"",
+		"render-build": "npm install && npm run build"
+
   },
   "author": "rubaba",
+  
   "license": "MIT"
 }
