--- a/server/package.json
+++ b/server/package.json
@@ -21,5 +21,8 @@
 		"graphql": "^15.8.0",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.1.1"
+	},
+	"devDependencies": {
+		"nodemon": "^3.0.3"
 	}
 }
