Edited root package.json and procfile once again

--- a/package.json
+++ b/package.json
@@ -118,7 +118,8 @@
 
     "start": "node server/server.js --ignore client",
 		"develop": "concurrently \"cd server && npm run start\" \"cd client && npm run dev\"",
-		"build": "cd client && npm start",
+    "install": "cd server && npm i && cd ../client && npm i",
+		"build": "cd client && npm run build",
 		"preview":"concurrently \"cd server && npm run start\" \"cd client && npm run preview\"",
 		"render-build": "npm install && npm run build"
 
