--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
 		"express-graphql": "^0.12.0",
 		"graphql": "^15.8.0",
 		"jsonwebtoken": "^9.0.2",
-		"mongoose": "^8.1.1"
+		"mongoose": "^8.1.1",
+		"path": "^0.12.7"
 	},
 	"devDependencies": {
 		"nodemon": "^3.0.3"
